# neurocache

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  FEATURES.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  turbo.json  vercel.json
.contextos/: graph.db
apps/api/: .dockerignore  Dockerfile  go.mod  package.json
apps/api/cmd/cli/: main.go
apps/api/cmd/server/: main.go
apps/api/internal/acl/: acl.go  acl_test.go  categories.go  storage.go
apps/api/internal/aiops/: abtest.go  agent.go  audit.go  churn.go  circuit.go  cost.go  crdt.go  doc.go  event.go  flag.go  graph.go  inference.go  lineage.go  mcp.go  mcp_tools.go  mcp_tools_test.go  observe.go  persona.go  phase13_test.go  policy.go  safe.go  saga.go  scheduler.go  shadow.go  slo.go  streaming.go  trace.go  worker.go
apps/api/internal/blocking/: waiters.go  waiters_test.go
apps/api/internal/cluster/: crc16.go  crc16_test.go  gossip.go  node.go  redirect.go  state.go  (+1 more)
apps/rust-hotpath/: Cargo.toml  README.md
apps/rust-hotpath/src/: commands.rs  main.rs  proxy.rs  resp.rs  server.rs  store.rs  zset.rs
apps/web/: .gitignore  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
docs/: ARCHITECTURE_AUDIT.md  PERFORMANCE.md
scripts/: bench-all-commands.sh  bench-extended.sh  bench-integrated.sh  bench-pipelined-vs-redis.sh  bench-rust-vs-go-vs-redis.sh  bench-vs-redis.sh  install.sh  neurocache-integrated.sh
(+529 files in other folders)
